--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "render-mcp-server",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
+    "@modelcontextprotocol/sdk": "^1.0.3",
     "express": "^4.18.2"
   }
 }
