--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "render-mcp-server",
+  "name": "aws-docs-mcp-remote",
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
@@ -8,6 +8,6 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.0"
   }
 }
